; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-mongo.c_op_get_more.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-mongo.c_op_get_more.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer = type { i32, i64 }

@.str = private unnamed_addr constant [18 x i8] c"Invalid cursor id\00", align 1
@OP_GET_MORE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @op_get_more to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @op_get_more(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.buffer, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @luaL_checkinteger(i32* %12, i32 1)
  store i32 %13, i32* %4, align 4
  store i64 0, i64* %5, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = call i8* @luaL_checklstring(i32* %14, i32 2, i64* %5)
  store i8* %15, i8** %6, align 8
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @luaL_checkinteger(i32* %16, i32 3)
  store i32 %17, i32* %7, align 4
  store i64 0, i64* %8, align 8
  %18 = load i32*, i32** %3, align 8
  %19 = call i8* @luaL_tolstring(i32* %18, i32 4, i64* %8)
  store i8* %19, i8** %9, align 8
  %20 = load i64, i64* %8, align 8
  %21 = icmp ne i64 %20, 8
  br i1 %21, label %22, label %25

22:                                               ; preds = %1
  %23 = load i32*, i32** %3, align 8
  %24 = call i32 @luaL_error(i32* %23, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  store i32 %24, i32* %2, align 4
  br label %53

25:                                               ; preds = %1
  %26 = call i32 @buffer_create(%struct.buffer* %10)
  %27 = call i32 @reserve_length(%struct.buffer* %10)
  store i32 %27, i32* %11, align 4
  %28 = load i32, i32* %4, align 4
  %29 = call i32 @write_int32(%struct.buffer* %10, i32 %28)
  %30 = call i32 @write_int32(%struct.buffer* %10, i32 0)
  %31 = load i32, i32* @OP_GET_MORE, align 4
  %32 = call i32 @write_int32(%struct.buffer* %10, i32 %31)
  %33 = call i32 @write_int32(%struct.buffer* %10, i32 0)
  %34 = load i8*, i8** %6, align 8
  %35 = load i64, i64* %5, align 8
  %36 = call i32 @write_string(%struct.buffer* %10, i8* %34, i64 %35)
  %37 = load i32, i32* %7, align 4
  %38 = call i32 @write_int32(%struct.buffer* %10, i32 %37)
  %39 = load i8*, i8** %9, align 8
  %40 = call i32 @write_bytes(%struct.buffer* %10, i8* %39, i32 8)
  %41 = getelementptr inbounds %struct.buffer, %struct.buffer* %10, i32 0, i32 0
  %42 = load i32, i32* %41, align 8
  %43 = load i32, i32* %11, align 4
  %44 = call i32 @write_length(%struct.buffer* %10, i32 %42, i32 %43)
  %45 = load i32*, i32** %3, align 8
  %46 = getelementptr inbounds %struct.buffer, %struct.buffer* %10, i32 0, i32 1
  %47 = load i64, i64* %46, align 8
  %48 = inttoptr i64 %47 to i8*
  %49 = getelementptr inbounds %struct.buffer, %struct.buffer* %10, i32 0, i32 0
  %50 = load i32, i32* %49, align 8
  %51 = call i32 @lua_pushlstring(i32* %45, i8* %48, i32 %50)
  %52 = call i32 @buffer_destroy(%struct.buffer* %10)
  store i32 1, i32* %2, align 4
  br label %53

53:                                               ; preds = %25, %22
  %54 = load i32, i32* %2, align 4
  ret i32 %54
}

declare dso_local i32 @luaL_checkinteger(i32*, i32) #1

declare dso_local i8* @luaL_checklstring(i32*, i32, i64*) #1

declare dso_local i8* @luaL_tolstring(i32*, i32, i64*) #1

declare dso_local i32 @luaL_error(i32*, i8*) #1

declare dso_local i32 @buffer_create(%struct.buffer*) #1

declare dso_local i32 @reserve_length(%struct.buffer*) #1

declare dso_local i32 @write_int32(%struct.buffer*, i32) #1

declare dso_local i32 @write_string(%struct.buffer*, i8*, i64) #1

declare dso_local i32 @write_bytes(%struct.buffer*, i8*, i32) #1

declare dso_local i32 @write_length(%struct.buffer*, i32, i32) #1

declare dso_local i32 @lua_pushlstring(i32*, i8*, i32) #1

declare dso_local i32 @buffer_destroy(%struct.buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
